Add bootstrap to base template footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,54 +61,58 @@
     </main>
 
     <footer>
-        <div class="footer-container">
-            <!-- Column 1 -->
-            <div class="footer-column">
-                <div class="site-logo">
-                    <h2>Crimson Vine Cellars</h2> 
+        <div class="container">
+            <div class="row">
+                <!-- Column 1 -->
+                <div class="col-lg-4 col-md-12 footer-column mb-4">
+                    <div class="site-logo">
+                        <h2>Crimson Vine Cellars</h2> 
+                    </div>
+                    <p class="site-description">
+                        Dedicated to crafting exceptional wines that celebrate tradition, quality, and the beauty of nature. 
+                        From handpicked grapes to expertly blended varietals, each bottle reflects our passion for winemaking 
+                        and our commitment to sustainability. 
+                    </p>
+                    <div class="social-links">
+                        <a href="https://x.com/" class="social-link" aria-label="Go to twitter page"><i class="fab fa-twitter"></i></a>
+                        <a href="https://facebook.com/" class="social-link" aria-label="Go to facebook page"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://instagram.com/" class="social-link" aria-label="Go to instagram page"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </div>
-                <p class="site-description">
-                    Dedicated to crafting exceptional wines that celebrate tradition, quality, and the beauty of nature. 
-                    From handpicked grapes to expertly blended varietals, each bottle reflects our passion for winemaking 
-                    and our commitment to sustainability. 
-                </p>
-                <div class="social-links">
-                    <a href="https://x.com/" class="social-link"><i class="fab fa-twitter"></i></a>
-                    <a href="https://facebook.com/" class="social-link"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://instagram.com/" class="social-link"><i class="fab fa-instagram"></i></a>
+                
+                <!-- Column 2 -->
+                <div class="col-lg-4 col-md-12 footer-column mb-4">
+                    <h3>Explore</h3>
+                    <ul class="page-links list-unstyled">
+                        <li><a href="/" aria-label="Home page">Home</a></li>
+                        <li><a href="/" aria-label="Books page">Wines</a></li>
+                        <li><a href="/" aria-label="About us page">About Us</a></li>
+                        <li><a href="/" aria-label="Request a book page">Host an event with us</a></li>
+                    </ul>
+                </div>
+                
+                <!-- Column 3 -->
+                <div class="col-lg-4 col-md-12 footer-column mb-4">
+                    <ul class="contact-details list-unstyled">
+                        <li><h3>Need some help?</h3></li>
+                        <li><p>Email: info@CrimsonVineCellars.com</p></li>
+                        <li><p>Wed - Sun</p></li>
+                        <li><p>Open Hours: 11am - 9pm</p></li>
+                    </ul>
                 </div>
             </div>
-            <hr>
-            
-            <!-- Column 2 -->
-            <div class="footer-column">
-                <h3>Explore</h3>
-                <ul class="page-links">
-                    <li><a href="{{ home_url }}">Home</a></li>
-                    <li><a href="">Wines</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Host an Event</a></li>
-                </ul>
+            <!-- Copyright final row -->
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p>&copy; 2024 Crimson Vine Cellars. All rights reserved.</p>
+                </div>
             </div>
-            <hr>
-            
-            <!-- Column 3 -->
-            <div class="footer-column">
-                <ul class="contact-details">
-                    <li><h3>Need some help?</h3></li>
-                    <li><p>Email: info@CrimsonVineCellars.com</p></li>
-                    <li><p>Wed - Sun</p></li>
-                    <li><p>Open Hours: 11am - 9pm</p></li>
-                </ul>
-            </div>
-
-            
-        </div>
-        <!-- Copyright final row -->
-        <div class="copyright">
-            <p>&copy; 2024 Crimson Vine Cellars. All rights reserved.</p>
         </div>
     </footer>
+
+
+
+
 
     {% block core_js %}
     <!-- Bootstrap JS, Popper.js, and jQuery -->
