--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,7 @@
 {% load static %}
 
+{% url 'home' as home_url %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,7 +35,67 @@
 <body>
     <header>
         <!-- Nav Bar -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand navbar-brand-custom" href="{{ home_url }}">
+                Crimson Vine Cellars
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <hr>
+                <ul class="navbar-nav mx-auto navbar-nav-center">
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{{ home_url }}">All Wines</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{{ home_url }}">Our Story</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{{ home_url }}">Visit Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{{ home_url }}">Contact</a>
+                    </li>
+                </ul>
+                <hr>
 
+                <!-- Moved to the right -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <i class="fas fa-search search-icon"></i>
+                    </li>
+                    <li class="nav-item">
+                        <form class="form-inline my-2 my-lg-0" method="GET" action="#">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query">
+                        </form>
+                    </li>
+                        
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{{ home_url }}">
+                            <i class="fas fa-user"></i> <!-- Profile icon -->
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{{ home_url }}">
+                            <i class="fas fa-book"></i> <!-- Book icon -->
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == logout_url %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == login_url %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == signup_url %}active{% endif %}" href="{% url 'account_signup' %}">Sign up</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
     </header>
 
     {% block page_header %}
@@ -74,9 +136,9 @@
                         and our commitment to sustainability. 
                     </p>
                     <div class="social-links">
-                        <a href="https://x.com/" class="social-link" aria-label="Go to twitter page"><i class="fab fa-twitter"></i></a>
-                        <a href="https://facebook.com/" class="social-link" aria-label="Go to facebook page"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://instagram.com/" class="social-link" aria-label="Go to instagram page"><i class="fab fa-instagram"></i></a>
+                        <a href="https://x.com/" class="social-link text-reset text-decoration-none" aria-label="Go to twitter page"><i class="fab fa-twitter"></i></a>
+                        <a href="https://facebook.com/" class="social-link text-reset text-decoration-none" aria-label="Go to facebook page"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://instagram.com/" class="social-link text-reset text-decoration-none" aria-label="Go to instagram page"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 
@@ -84,10 +146,10 @@
                 <div class="col-lg-4 col-md-12 footer-column mb-4">
                     <h3>Explore</h3>
                     <ul class="page-links list-unstyled">
-                        <li><a href="/" aria-label="Home page">Home</a></li>
-                        <li><a href="/" aria-label="Books page">Wines</a></li>
-                        <li><a href="/" aria-label="About us page">About Us</a></li>
-                        <li><a href="/" aria-label="Request a book page">Host an event with us</a></li>
+                        <li><a href="/" class="text-reset text-decoration-none" aria-label="Home page">Home</a></li>
+                        <li><a href="/" class="text-reset text-decoration-none" aria-label="Books page">Wines</a></li>
+                        <li><a href="/" class="text-reset text-decoration-none" aria-label="About us page">About Us</a></li>
+                        <li><a href="/" class="text-reset text-decoration-none" aria-label="Request a book page">Host an event with us</a></li>
                     </ul>
                 </div>
                 
