--- a/templates/base.html
+++ b/templates/base.html
@@ -62,11 +62,11 @@
 
                 <!-- Moved to the right -->
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item my-auto me-2">
                         <i class="fas fa-search search-icon"></i>
                     </li>
                     <li class="nav-item">
-                        <form class="form-inline my-2 my-lg-0" method="GET" action="#">
+                        <form class="form-inline my-2 my-lg-0 d-none" method="GET" action="">
                             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query">
                         </form>
                     </li>
