--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{{ home_url }}">
-                            <i class="fas fa-book"></i> <!-- Book icon -->
+                            <i class="fas fa-shopping-basket"></i> <!-- Basket icon -->
                         </a>
                     </li>
                     <li class="nav-item">
@@ -136,9 +136,9 @@
                         and our commitment to sustainability. 
                     </p>
                     <div class="social-links">
-                        <a href="https://x.com/" class="social-link text-reset text-decoration-none" aria-label="Go to twitter page"><i class="fab fa-twitter"></i></a>
-                        <a href="https://facebook.com/" class="social-link text-reset text-decoration-none" aria-label="Go to facebook page"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://instagram.com/" class="social-link text-reset text-decoration-none" aria-label="Go to instagram page"><i class="fab fa-instagram"></i></a>
+                        <a href="https://x.com/" class="social-link text-reset text-decoration-none" aria-label="Go to twitter page"><i class="fab fa-twitter me-3 fa-2x"></i></a>
+                        <a href="https://facebook.com/" class="social-link text-reset text-decoration-none" aria-label="Go to facebook page"><i class="fab fa-facebook-f me-3 fa-2x"></i></a>
+                        <a href="https://instagram.com/" class="social-link text-reset text-decoration-none" aria-label="Go to instagram page"><i class="fab fa-instagram fa-2x"></i></a>
                     </div>
                 </div>
                 
