Add a second text and image section to index template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -102,4 +102,30 @@
         </div>
     </div>
 
+    <!-- Host your event with us section  -->
+    <div class="container-fluid wine-banner">
+        <div class="row align-items-center flex-column flex-md-row">
+             <!-- Image Section -->
+             <div class="col-md-6 text-center mt-3 mt-md-0">
+                <picture>
+                    <img src="{% static 'images/red-wine-glasses.jpg' %}" alt="Crimson Wines Vineyard" class="banner-image img-fluid">
+                </picture>
+            </div>
+            <!-- Text Section -->
+            <div class="col-md-6 text-center text-md-start">
+                <div class="banner-text-box wine-text">
+                    <h2><strong>Host your next event with us</strong></h2>
+                    <p>Looking for the perfect venue to host your next celebration? At Crimson Vine Cellars, 
+                        our stunning vineyard and cellar offer a breath taking backdrop for weddings, 
+                        corporate gatherings, and private events. Surrounded by rolling vines and rustic elegance, 
+                        your guests will enjoy a truly unforgettable experience. Whether it's an intimate gathering
+                         or a grand affair, our team will work with you to create the perfect atmosphere, 
+                         complete with fine wines and personalized touches.
+                    </p>               
+                    <a href="{{ home }}" class="btn btn-primary">Contact Us</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
