--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
 <body>
     <header>
         <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand navbar-brand-custom" href="{{ home_url }}">
                 Crimson Vine Cellars
             </a>
@@ -122,7 +122,7 @@
         {% endblock %}
     </main>
 
-    <footer>
+    <footer class="bg-dark text-white py-4">
         <div class="container">
             <div class="row">
                 <!-- Column 1 -->
