Update the footer colours in base template

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -42,7 +42,7 @@ nav {
 
 /* Footer Styles */
 footer {
-    background-color: #000; /* Already set in HTML */
+    background-color: #000; 
 }
 
 .social-links i {
