--- a/templates/base.html
+++ b/templates/base.html
@@ -122,7 +122,7 @@
         {% endblock %}
     </main>
 
-    <footer class="bg-dark text-white py-4">
+    <footer class="text-white py-4">
         <div class="container">
             <div class="row">
                 <!-- Column 1 -->
