Add buttons to link product list to details templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,8 @@
 {% load static %}
 
 {% url 'home' as home_url %}
-{% url 'product_list' as products_url %}
+{% url 'product_list' as product_list_url %}
+{% url 'product_details' as product_details_url %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -47,7 +48,7 @@
                 <hr>
                 <ul class="navbar-nav mx-auto navbar-nav-center">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == products_url %}active{% endif %}" href="{{ products_url }}">All Wines</a>
+                        <a class="nav-link {% if request.path == product_list_url %}active{% endif %}" href="{{ product_list_url }}">All Wines</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{{ home_url }}">Our Story</a>
