Update and add css to all auth login template

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -72,6 +72,11 @@ footer a:hover {
     color: #acdbdc;
 }
 
+/* Login page styles */
+.form-container {
+    background-color: #fffef3; 
+    border: 2px solid #161616; 
+}
 
 /* About Us page styles */
 .about-us-box {
