--- a/products/templates/product_list.html
+++ b/products/templates/product_list.html
@@ -34,7 +34,7 @@
                                         <p><strong>Rating:</strong> {{ wine.rating }}</p>
                                         <p><strong>Stock:</strong> {{ wine.stock }}</p>
                                         <p><strong>Description:</strong> {{ wine.description|slice:":100" }}{% if wine.description|length > 100 %}...{% endif %}</p>
-                                        <a href="{% url 'product_detail' wine_id=wine.id %}" class="btn btn-primary">View Details</a>
+                                        <a href="{% url 'product_details' wine_id=wine.id %}" class="btn btn-primary">View Details</a>
                                     </div>
                                 </div>
                             </li>
