--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header>
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -121,7 +121,7 @@
         </div>
     </div>
 
-    <main>
+    <main class="flex-grow-1">
         {% block content %}
         {% endblock %}
     </main>
