Update about us template styles

--- a/home/templates/about_us.html
+++ b/home/templates/about_us.html
@@ -32,7 +32,7 @@
         <!-- First Box -->
         <div class="col-md-4 mb-4 d-flex justify-content-center">
             <div class="about-us-box about-box-1 text-center p-4 rounded">
-                <img src="{% static 'images/wine-cellar.jpg' %}" alt="Image 1" class="img-fluid box-image mb-3" style="max-height: 300px;">
+                <img src="{% static 'images/grape-picking-2.jpg' %}" alt="Image 1" class="img-fluid box-image mb-3" style="max-height: 300px;">
                 <h4>Our Mission</h4>
                 <p>Our mission is to craft exceptional wines that celebrate the beauty of nature and the art of winemaking. 
                     We are dedicated to sustainability, quality, and creating memorable experiences that connect people 
