Add proudct card styling and button to product list template

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -93,17 +93,17 @@ footer a:hover {
 }
 
 .about-box-1 {
-    background: rgba(155, 122, 242, 0.2);
+    background: rgba(237, 206, 219, 0.6);
     margin-right: 20px;
 }
 
 .about-box-2 {
-    background: rgba(250, 227, 233, 0.3);
+    background: rgba(176, 189, 216, 0.3);
     margin-right: 20px;
 }
 
 .about-box-3 {
-    background: rgba(201, 218, 252, 0.2);
+    background: rgba(255, 236, 232, 0.8);
     margin-right: 20px;
 }
 
@@ -124,16 +124,39 @@ footer a:hover {
     font-size: 1rem; 
 }
 
+/* Product page styles */
+.wine-item {
+    position: relative;
+    overflow: hidden;
+}
+
+.wine-info {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.wine-item:hover .wine-info {
+    opacity: 1;
+}
+
+.card-body {
+    position: relative;
+    z-index: 1;
+}
 
 
 
-
-
-
-
-
-
-/* Responsive Adjustments for Footer Columns */
 @media (max-width: 992px) {
     footer .col-lg-4 {
         text-align: center;
