--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -162,7 +162,16 @@ footer a:hover {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 270px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.sort-dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -172,9 +181,13 @@ footer a:hover {
     display: block;
 }
 
+.sort-dropdown-content.show {
+    display: block;
+}
 
-
-
+.dropdown-btn {
+    width: 120px;
+}
 
 @media (max-width: 992px) {
     footer .col-lg-4 {
