--- a/products/templates/product_list.html
+++ b/products/templates/product_list.html
@@ -27,17 +27,24 @@
                                 {% endfor %}
                             </select>
                         </div>
-                
-                        <!-- Rating Dropdown -->
+
+                        <!-- Price Range Filter -->
                         <div class="form-group m-3">
-                            <label for="rating">Rating:</label>
-                            <select id="rating" name="rating" class="form-control">
-                                <option value="">All Ratings</option>
-                                <option value="1" {% if request.GET.rating == '1' %}selected{% endif %}>1</option>
-                                <option value="2" {% if request.GET.rating == '2' %}selected{% endif %}>2</option>
-                                <option value="3" {% if request.GET.rating == '3' %}selected{% endif %}>3</option>
-                                <option value="4" {% if request.GET.rating == '4' %}selected{% endif %}>4</option>
-                                <option value="5" {% if request.GET.rating == '5' %}selected{% endif %}>5</option>
+                            <label for="price_min">Price Min:</label>
+                            <input type="number" id="price_min" name="price_min" class="form-control" value="{{ request.GET.price_min }}" step="0.01">
+                        </div>
+                        <div class="form-group m-3">
+                            <label for="price_max">Price Max:</label>
+                            <input type="number" id="price_max" name="price_max" class="form-control" value="{{ request.GET.price_max }}" step="0.01">
+                        </div>
+
+                        <!-- Availability Filter -->
+                        <div class="form-group m-3">
+                            <label for="available">Available:</label>
+                            <select id="available" name="available" class="form-control">
+                                <option value="">All</option>
+                                <option value="true" {% if request.GET.available == 'true' %}selected{% endif %}>In Stock</option>
+                                <option value="false" {% if request.GET.available == 'false' %}selected{% endif %}>Out of Stock</option>
                             </select>
                         </div>
             
