Fix bug in the filter dropdown content z-index

--- a/products/templates/product_list.html
+++ b/products/templates/product_list.html
@@ -40,7 +40,7 @@
 
                         <!-- Availability Filter -->
                         <div class="form-group m-3">
-                            <label for="available">Available:</label>
+                            <label for="available">Availability:</label>
                             <select id="available" name="available" class="form-control">
                                 <option value="">All</option>
                                 <option value="true" {% if request.GET.available == 'true' %}selected{% endif %}>In Stock</option>
