--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -188,6 +188,13 @@ footer a:hover {
     width: 120px;
 }
 
+/* Product details page */
+.wine-description {
+    max-width: 1000px;
+    text-align: left;
+    width: 100%;
+}
+
 @media (max-width: 992px) {
     footer .col-lg-4 {
         text-align: center;
